--- a/index.html
+++ b/index.html
@@ -37,11 +37,11 @@
     <div class="header wrapper">
       <img class="header_logo" src="/img/Logo.png" alt="logo">
       <nav>
-        <a href="#">Features</a>
-        <a href="#">About</a>
-        <a href="#">Pricing</a>
-        <a href="#">Reviews</a>
-        <a href="#">Contact</a>
+        <a href="#tab_section">Features</a>
+        <a href="#about_section">About</a>
+        <a href="#pricing_section">Pricing</a>
+        <a href="#reviews_section">Reviews</a>
+        <a href="#contact_section">Contact</a>
       </nav>
       <a class="burger_btn" href="#menu">
         <div class="burger">
@@ -53,8 +53,8 @@
           <ul>
             <li><a href="#tab_section">Features</a></li>
             <li><a href="#about_section">About</a></li>
-            <li><a href="#pricing_section"">Pricing</a></li>
-            <li><a href=" #reviews_section">Reviews</a></li>
+            <li><a href="#pricing_section">Pricing</a></li>
+            <li><a href="#reviews_section">Reviews</a></li>
             <li><a href="#contact_section">Contact</a></li>
           </ul>
           <div class="close_btn">
@@ -80,7 +80,7 @@
         </p>
         <button class="btn_dwnld">Download</button>
       </section>
-      <section class="singup_block">
+      <form class="singup_block">
         <div class="singup_block_title">
           <p>
             Try Your <span>FREE</span> Trial Today
@@ -89,8 +89,8 @@
         <input name="Name" type="text" placeholder="Name">
         <input name="Email" type="text" placeholder="Email">
         <input name="Password" type="text" placeholder="Password">
-        <button class="btn_get_started">Get Started</button>
-      </section>
+        <button class="btn_get_started" type="submit">Get Started</button>
+      </form>
     </div>
     <section class="social">
       <div class="social_container wrapper">
